kubenertes/deployment-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-v1-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front
      version: v1
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front-v1
        image: veronicachase/front:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-v2-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front
      version: v2
  template:
    metadata:
      labels:
        app: front
        version: v2
    spec:
      containers:
      - name: front-v2
        image: veronicachase/front:v2
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
