kubenertes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /back/v1
        pathType: Prefix
        backend:
          service:
            name: back-v1
            port:
              number: 5000
      - path: /back/v2
        pathType: Prefix
        backend:
          service:
            name: back-v2
            port:
              number: 5000
      - path: /front/v1
        pathType: Prefix
        backend:
          service:
            name: front-v1
            port:
              number: 80
      - path: /front/v2
        pathType: Prefix
        backend:
          service:
            name: front-v2
            port:
              number: 80
